Add tests for TokenRefresher + JavaDoc it.